--- a/vite/vite-webpack-react/package.json
+++ b/vite/vite-webpack-react/package.json
@@ -13,20 +13,28 @@
   "devDependencies": {
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@typescript-eslint/eslint-plugin": "^4.28.3",
+    "@typescript-eslint/parser": "^4.28.3",
     "@vitejs/plugin-react-refresh": "^1.3.1",
     "awesome-typescript-loader": "^5.2.1",
+    "babel-eslint": "^10.0.0",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
     "css-loader": "^5.2.6",
-    "eslint": "^7.30.0",
+    "eslint": "^7.5.0",
+    "eslint-config-react-app": "^6.0.0",
     "eslint-loader": "^4.0.2",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "eslint-plugin-flowtype": "^5.2.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-react": "^7.20.3",
+    "eslint-plugin-react-hooks": "^4.0.8",
     "html-webpack-plugin": "^5.3.2",
     "less": "^4.1.1",
     "less-loader": "^10.0.1",
+    "mini-css-extract-plugin": "^2.1.0",
     "optimize-css-assets-webpack-plugin": "^6.0.1",
     "postcss-loader": "^6.1.1",
     "style-loader": "^3.1.0",
-    "terser-webpack-plugin": "^5.1.4",
     "typescript": "^4.3.2",
     "url-loader": "^4.1.1",
     "vite": "^2.4.2",
