--- a/vite/vite-webpack-react/tsconfig.json
+++ b/vite/vite-webpack-react/tsconfig.json
@@ -1,19 +1,21 @@
 {
   "compilerOptions": {
-    "target": "ESNext",
-    "lib": ["DOM", "DOM.Iterable", "ESNext"],
-    "allowJs": false,
-    "skipLibCheck": false,
-    "esModuleInterop": false,
+    "target": "es6", 
+    "module": "ESNext", 
+    "moduleResolution": "node", 
+    "esModuleInterop": true,
+    "noResolve": false, 
+    "noImplicitAny": false, 
     "allowSyntheticDefaultImports": true,
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
-    "module": "ESNext",
-    "moduleResolution": "Node",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "noEmit": true,
-    "jsx": "react"
+    "removeComments": true, 
+    "sourceMap": true, 
+    "allowJs": true, 
+    "jsx": "react",
+    "baseUrl": "./",
+    "paths": {
+      "@/*": ["src/*"],
+      "static/*": ["static/*"]
+    },
   },
   "include": ["./src"]
 }
